[swagger] auth 라우터 정보 추가
